samples/_failures_safe/1761651122_507082_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ebbc83d.c: In function ‘main’:
./samples/SAFE/__tmp_0ebbc83d.c:145:9: error: expected declaration or statement at end of input
  145 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_0ebbc83d.c:145:9: error: expected declaration or statement at end of input
